lang.java.statics.test/tests/positive/classes/inheritance/inheritnestedclass.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public class B {}
    public class C extends A.B {}
}

