lang.java.statics.test/tests/negative/packages/classes-with-same-name-in-unnamed-package.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type
JAVAC  fail duplicate class

[A]
public class A {}

[A]
public class A {}
